[gd_scene load_steps=6 format=3 uid="uid://ddpy4ivmlysml"]

[ext_resource type="Script" path="res://scenes/game/search_forest/scaryforest.gd" id="1_fmukx"]
[ext_resource type="AudioStream" uid="uid://dxcl4a8047r7o" path="res://sounds/Walking In Forest.mp3" id="2_2wfw8"]
[ext_resource type="AudioStream" uid="uid://b6rf0ra2ivj6" path="res://sounds/Forest Night After The Storm.mp3" id="2_e8ttx"]
[ext_resource type="Texture2D" uid="uid://dcpv581gkk0ct" path="res://images/forest/unsettling_forest_2.jpg" id="2_lol3y"]
[ext_resource type="Texture2D" uid="uid://c55bplvds7ki8" path="res://images/direction/orange-right-arrow.png" id="4_532x8"]

[node name="Scaryforest" type="Node2D"]
script = ExtResource("1_fmukx")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 647.0
color = Color(0, 0, 0, 1)

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(577.5, 323.5)
scale = Vector2(1.56114, 1.56763)
texture = ExtResource("2_lol3y")

[node name="ForestNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_e8ttx")
volume_db = -15.0

[node name="Walking" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_2wfw8")

[node name="Right" type="Button" parent="."]
offset_left = 968.0
offset_top = 451.0
offset_right = 1068.0
offset_bottom = 551.0
focus_mode = 0
flat = true

[node name="Left" type="Button" parent="."]
offset_left = 82.0
offset_top = 450.0
offset_right = 182.0
offset_bottom = 550.0
focus_mode = 0
flat = true

[node name="Straight" type="Button" parent="."]
offset_left = 515.0
offset_top = 430.0
offset_right = 615.0
offset_bottom = 530.0
focus_mode = 0
flat = true

[node name="ArrowRight" type="Sprite2D" parent="."]
position = Vector2(1020, 500)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_532x8")

[node name="ArrowLeft" type="Sprite2D" parent="."]
position = Vector2(132, 500)
rotation = 3.14159
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_532x8")

[node name="ArrowStraight" type="Sprite2D" parent="."]
position = Vector2(565, 480)
rotation = -1.5708
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_532x8")

[connection signal="pressed" from="Right" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Straight" to="." method="_on_button_pressed"]
